--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
 
 .left {
     position: relative;
-    display: inline-block;
+    float: left;
     height: 400px;
     width: 50%;
     border-right: 2px solid #1a1821;
@@ -43,7 +43,7 @@ header {
 
 .right {
     position: relative;
-    display: inline-block;
+    float: left;
     height: 400px;
     width: 50%;
     padding: 1em;
