--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Inconsolata|Lobster+Two);
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
 
 @font-face {
@@ -36,13 +37,13 @@ html, body {
 body {
     padding: 1em;
     background-color: #2a2734;
-    font-size: 1em;
-    font-family: "mono", Consolas, monospace;
+    font-size: 14px;
+    font-family: "monaco", Consolas, monospace;
 }
 
 header {
     width: 100%;
-    height: 3.5em;
+    height: 4em;
     border-bottom: 5px solid #1a1821;
 }
 
@@ -52,7 +53,7 @@ header {
     height: 400px;
     width: 50%;
     border-right: 2px solid #1a1821;
-    padding: 1em;
+    padding: 1em 2.5em 1.5em 0;
 }
 
 .right {
@@ -60,13 +61,13 @@ header {
     float: left;
     height: 400px;
     width: 50%;
-    padding: 1em;
+    padding: 1em 2.5em 1.5em 1em;
 }
 
 iframe {
     border: none;
     width:100%;
-    height: calc(100% - 400px - 3.5em);
+    height: calc(100% - 400px - 4em);
     background-color: #eeebff;
 }
 
@@ -86,16 +87,6 @@ textarea:focus {
     outline: none;
 }
 
-h1{
-    margin-bottom: 5px;
-	font-size: 20px;
-	text-transform: uppercase;
-	color: #9b87fd;
-	font-weight: normal;
-    line-height: 2;
-    display: block;
-
-}
 
 h1 span{
 	color: #ffa852;
@@ -108,6 +99,8 @@ cite {
 	line-height: 0;
 	display: inline-block;
 	text-transform: none;
+    letter-spacing: 0px;
+    font-family: Mono;
 }
 
 a {
@@ -150,4 +143,16 @@ svg:hover path {
 
 #config, .js-close {
     display: none;
+}
+
+h1{
+    margin-bottom: 5px;
+	font-size: 20px;
+	_text-transform: uppercase;
+	color: #9b87fd;
+	font-weight: normal;
+    line-height: 2;
+    display: block;
+    letter-spacing: 1px;
+font-family: 'Lobster Two';
 }
